intermediate commit